# skdeck

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cargo-sources.json  com.github.sfietkonstantin.SKDeck.json  com.github.skdeck.json
.github/workflows/: ci.yml  flatpak.yml
lib/: CMakeLists.txt  crusaderkingsmanager.cpp  crusaderkingsmanager.h
lib/ck3/: backuploader.cpp  loader.cpp  model.cpp  rssavenotifier.cpp  rssavenotifier.h  save.cpp  saveloader.cpp
lib/include/ck3/: backuploader.h  loader.h  model.h  save.h  saveloader.h
lib/rust/: Cargo.toml  build.rs
lib/rust/src/: ck3.rs  ffi.rs  lib.rs
lib/rust/src/ck3/: cache.rs
lib/rust/src/ffi/: ck3.rs
